--- a/src/Libraries/AridityTeam.Platform.Core/ExceptionStrings.resx
+++ b/src/Libraries/AridityTeam.Platform.Core/ExceptionStrings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Validation_CollectionEmpty" xml:space="preserve">
+    <value>Collection must not be empty.</value>
+  </data>
   <data name="Validation_HasCollectionDuplicates" xml:space="preserve">
     <value>Collection must contain any duplicate elements.</value>
   </data>
@@ -125,6 +128,9 @@
   </data>
   <data name="Validation_InvalidDirectory" xml:space="preserve">
     <value>Value is not a valid directory path.</value>
+  </data>
+  <data name="Validation_InvalidEmail" xml:space="preserve">
+    <value>Value is not a valid email address.</value>
   </data>
   <data name="Validation_InvalidEnum" xml:space="preserve">
     <value>Value is not a valid {0} enum value.</value>
@@ -135,10 +141,43 @@
   <data name="Validation_InvalidIP" xml:space="preserve">
     <value>Value is not a valid IP address.</value>
   </data>
+  <data name="Validation_InvalidOperationDefault" xml:space="preserve">
+    <value>Operation is not valid in the current state.</value>
+  </data>
+  <data name="Validation_InvalidStateDefault" xml:space="preserve">
+    <value>Object is in a invalid state.</value>
+  </data>
+  <data name="Validation_InvalidURL" xml:space="preserve">
+    <value>Value is not a valid URL.</value>
+  </data>
+  <data name="Validation_LengthMustBeInRange" xml:space="preserve">
+    <value>String length must be between {0} and {1} characters.</value>
+  </data>
+  <data name="Validation_MustBeFalse" xml:space="preserve">
+    <value>Condition must be false.</value>
+  </data>
+  <data name="Validation_MustBeTrue" xml:space="preserve">
+    <value>Condition must be true.</value>
+  </data>
+  <data name="Validation_NotEqualTo" xml:space="preserve">
+    <value>Expected value: {0}, Actual value: {1}</value>
+  </data>
   <data name="Validation_NotOneOf" xml:space="preserve">
     <value>Value must be one of: {0}</value>
   </data>
   <data name="Validation_PortInvalid" xml:space="preserve">
     <value>Port number must be between 0 and 65535</value>
+  </data>
+  <data name="Validation_StringNotMatchingPattern" xml:space="preserve">
+    <value>Value does not match the required pattern: {0}</value>
+  </data>
+  <data name="Validation_ValueEmpty" xml:space="preserve">
+    <value>Value cannot be empty.</value>
+  </data>
+  <data name="Validation_ValueEmptyOrWhitespace" xml:space="preserve">
+    <value>Value cannot be empty or consist only of white-space characters.</value>
+  </data>
+  <data name="Validation_ValueMustBeInRange" xml:space="preserve">
+    <value>Value must be between {0} and {1}.</value>
   </data>
 </root>
